2019/4/3 21:28第一次修改

--- a/后台管理系统/examine.html
+++ b/后台管理系统/examine.html
@@ -2,15 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="style/examine.css">
+    <title>审核图片</title>
 </head>
 <body>
+<h1>审核图片</h1>
+<div class="picture">
+
+    <ul>
+        <li><img id="pic0" src="img/test.png">
+        <button onclick="pass_pic(0)">通过</button>
+            <p id="tip0">节气</p></li>
+
+        <li><img id="pic1" src="img/test.png">
+            <button onclick="pass_pic(1)">通过</button>
+            <p id="tip1">节气</p></li>
+        <li><img id="pic2" src="img/test.png">
+            <button onclick="pass_pic(2)">通过</button>
+            <p id="tip2">节气</p></li>
+        <li><img id="pic3" src="img/test.png">
+            <button onclick="pass_pic(3)">通过</button>
+            <p id="tip3">节气</p></li>
+        <li><img id="pic4" src="img/test.png">
+            <button onclick="pass_pic(4)">通过</button>
+            <p id="tip4">节气</p></li>
+        <li><img id="pic5" src="img/test.png">
+            <button onclick="pass_pic(5)">通过</button>
+            <p id="tip5">节气</p></li>
+        <li><img id="pic6" src="img/test.png">
+            <button onclick="pass_pic(6)">通过</button>
+            <p id="tip6">节气</p></li>
+        <li><img id="pic7" src="img/test.png">
+            <button  onclick="pass_pic(7)">通过</button>
+            <p id="tip7">节气</p></li>
+        <li><img  id="pic8" src="img/test.png">
+            <button  onclick="pass_pic(8)">通过</button>
+            <p id="tip8">节气</p></li>
+        <li><img  id="pic9" src="img/test.png">
+            <button  onclick="pass_pic(9)">通过</button>
+            <p id="tip9">节气</p></li>
+        <li><img  id="pic10" src="img/test.png">
+            <button onclick="pass_pic(10)">通过</button>
+            <p id="tip10">节气</p></li>
+        <li><img  id="pic11" src="img/test.png">
+            <button onclick="pass_pic(11)">通过</button>
+            <p id="tip11">节气</p></li>
+    </ul>
+</div>
 
 
-
-
+<div class="btns">
+    <button id="btn1" class="btn" onclick='nextpage(1)'>1</button>
+    <button id="btn2" class="btn">2</button>
+    <button id="btn3" class="btn">3</button>
+    <button id="btn4" class="btn">4</button>
+    <button id="btn5" class="btn">5</button>
+</div>
 
 
 </body>
+<script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/examine.js"></script>
 </html>
