--- a/后台管理系统/main.html
+++ b/后台管理系统/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style/main.css">
-    <title>Title</title>
+    <title>重邮图库后台管理系统</title>
 </head>
 <body>
 <h1>重邮图库后台管理系统</h1>
@@ -36,5 +36,6 @@
 
 
 </body>
+<script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </html>
