--- a/后台管理系统/user.html
+++ b/后台管理系统/user.html
@@ -2,10 +2,191 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>用户管理</title>
+    <link rel="stylesheet" href="style/user.css">
 </head>
 <body>
+<h1>用户管理</h1>
+<div class="main">
+    <table border="2" class="table">
+        <tbody>
+        <tr>
+            <td >学号</td>
+            <td>姓名</td>
+            <td>用户名</td>
+            <td>密码</td>
+            <td>操作</td>
+        </tr>
+        <tr id="tr0">
+            <td id="id0"></td>
+            <td id="name1_0"></td>
+            <td id="name2_0"></td>
+            <td id="pwd0"></td>
+            <td ><button  onclick="del(0)">删除</button></td>
+        </tr>
+        <tr id="tr1">
+            <td id="id1"></td>
+            <td id="name1_1"></td>
+            <td id="name2_1"></td>
+            <td id="pwd1"></td>
+            <td ><button  onclick="del(1)">删除</button></td>
+        </tr>
+        <tr id="tr2">
+            <td id="id2"></td>
+            <td id="name1_2"></td>
+            <td id="name2_2"></td>
+            <td id="pwd2"></td>
+            <td ><button  onclick="del(2)">删除</button></td>
+        </tr>
+        <tr id="tr3">
+            <td id="id3"></td>
+            <td id="name1_3"></td>
+            <td id="name2_3"></td>
+            <td id="pwd3"></td>
+            <td ><button  onclick="del(3)">删除</button></td>
+        </tr>
+        <tr id="tr4">
+            <td id="id4"></td>
+            <td id="name1_4"></td>
+            <td id="name2_4"></td>
+            <td id="pwd4"></td>
+            <td ><button  onclick="del(4)">删除</button></td>
+        </tr>
+        <tr id="tr5">
+            <td id="id5"></td>
+            <td id="name1_5"></td>
+            <td id="name2_5"></td>
+            <td id="pwd5"></td>
+            <td ><button  onclick="del(5)">删除</button></td>
+        </tr>
+        <tr id="tr6">
+            <td id="id6"></td>
+            <td id="name1_6"></td>
+            <td id="name2_6"></td>
+            <td id="pwd6"></td>
+            <td ><button  onclick="del(6)">删除</button></td>
+        </tr>
+        <tr id="tr7">
+            <td id="id7"></td>
+            <td id="name1_7"></td>
+            <td id="name2_7"></td>
+            <td id="pwd7"></td>
+            <td ><button  onclick="del(7)">删除</button></td>
+        </tr>
+        <tr id="tr8">
+            <td id="id8"></td>
+            <td id="name1_8"></td>
+            <td id="name2_8"></td>
+            <td id="pwd8"></td>
+            <td ><button  onclick="del(8)">删除</button></td>
+        </tr>
+        <tr id="tr9">
+            <td id="id9"></td>
+            <td id="name1_9"></td>
+            <td id="name2_9"></td>
+            <td id="pwd9"></td>
+            <td ><button  onclick="del(9)">删除</button></td>
+        </tr>
+        <tr id="tr10">
+            <td id="id10"></td>
+            <td id="name1_10"></td>
+            <td id="name2_10"></td>
+            <td id="pwd10"></td>
+            <td ><button  onclick="del(10)">删除</button></td>
+        </tr>
+        <tr id="tr11">
+            <td id="id11"></td>
+            <td id="name1_11"></td>
+            <td id="name2_11"></td>
+            <td id="pwd11"></td>
+            <td ><button  onclick="del(11)">删除</button></td>
+        </tr>
+        <tr id="tr12">
+            <td id="id12"></td>
+            <td id="name1_12"></td>
+            <td id="name2_12"></td>
+            <td id="pwd12"></td>
+            <td ><button  onclick="del(12)">删除</button></td>
+        </tr>
+        <tr id="tr13">
+            <td id="id13"></td>
+            <td id="name1_13"></td>
+            <td id="name2_13"></td>
+            <td id="pwd13"></td>
+            <td ><button  onclick="del(13)">删除</button></td>
+        </tr>
+        <tr id="tr14">
+            <td id="id14"></td>
+            <td id="name1_14"></td>
+            <td id="name2_14"></td>
+            <td id="pwd14"></td>
+            <td ><button  onclick="del(14)">删除</button></td>
+        </tr>
+        <tr id="tr15">
+            <td id="id15"></td>
+            <td id="name1_15"></td>
+            <td id="name2_15"></td>
+            <td id="pwd15"></td>
+            <td ><button  onclick="del(15)">删除</button></td>
+        </tr>
+        <tr id="tr16">
+            <td id="id16"></td>
+            <td id="name1_16"></td>
+            <td id="name2_16"></td>
+            <td id="pwd16"></td>
+            <td ><button  onclick="del(16)">删除</button></td>
+        </tr>
+        <tr id="tr17">
+            <td id="id17"></td>
+            <td id="name1_17"></td>
+            <td id="name2_17"></td>
+            <td id="pwd17"></td>
+            <td ><button  onclick="del(17)">删除</button></td>
+        </tr>
+        <tr id="tr18">
+            <td id="id18"></td>
+            <td id="name1_18"></td>
+            <td id="name2_18"></td>
+            <td id="pwd18"></td>
+            <td ><button  onclick="del(18)">删除</button></td>
+        </tr>
+        <tr id="tr19">
+            <td id="id19"></td>
+            <td id="name1_19"></td>
+            <td id="name2_19"></td>
+            <td id="pwd19"></td>
+            <td ><button  onclick="del(19)">删除</button></td>
+        </tr>
 
+
+
+        </tbody>
+    </table>
+</div>
+<div class="btns">
+    <button id="btn0" class="btn" onclick='nextpage(0)'>1</button>
+    <button id="btn1" class="btn" onclick='nextpage(1)'>2</button>
+    <button id="btn2" class="btn" onclick='nextpage(2)'>3</button>
+    <button id="btn3" class="btn" onclick='nextpage(3)'>4</button>
+    <button id="btn4" class="btn" onclick='nextpage(4)'>5</button>
+    <button id="btn5" class="btn" onclick='nextpage(5)'>6</button>
+    <button id="btn6" class="btn" onclick='nextpage(6)'>7</button>
+    <button id="btn7" class="btn" onclick='nextpage(7)'>8</button>
+    <button id="btn8" class="btn" onclick='nextpage(8)'>9</button>
+    <button id="btn9" class="btn" onclick='nextpage(9)'>10</button>
+    <button id="btn10" class="btn" onclick='nextpage(10)'>11</button>
+    <button id="btn11" class="btn" onclick='nextpage(11)'>12</button>
+    <button id="btn12" class="btn" onclick='nextpage(12)'>13</button>
+    <button id="btn13" class="btn" onclick='nextpage(13)'>14</button>
+    <button id="btn14" class="btn" onclick='nextpage(14)'>15</button>
+    <button id="btn15" class="btn" onclick='nextpage(15)'>16</button>
+    <button id="btn16" class="btn" onclick='nextpage(16)'>17</button>
+    <button id="btn17" class="btn" onclick='nextpage(17)'>18</button>
+    <button id="btn18" class="btn" onclick='nextpage(18)'>19</button>
+    <button id="btn19" class="btn" onclick='nextpage(19)'>20</button>
+
+</div>
 </body>
 <script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/user.js"></script>
 </html>
