--- a/后台管理系统/examine.html
+++ b/后台管理系统/examine.html
@@ -53,10 +53,10 @@
 
 <div class="btns">
     <button id="btn1" class="btn" onclick='nextpage(1)'>1</button>
-    <button id="btn2" class="btn">2</button>
-    <button id="btn3" class="btn">3</button>
-    <button id="btn4" class="btn">4</button>
-    <button id="btn5" class="btn">5</button>
+    <button id="btn2" class="btn" onclick='nextpage(2)'>2</button>
+    <button id="btn3" class="btn" onclick='nextpage(3)'>3</button>
+    <button id="btn4" class="btn" onclick='nextpage(4)'>4</button>
+    <button id="btn5" class="btn" onclick='nextpage(5)'>5</button>
 </div>
 
 
