--- a/后台管理系统/examine.html
+++ b/后台管理系统/examine.html
@@ -6,61 +6,207 @@
     <title>审核图片</title>
 </head>
 <body>
-<h1>审核图片</h1>
-<div class="picture">
-
-    <ul>
-        <li><img id="pic0" src="img/test.png">
-        <button onclick="pass_pic(0)">通过</button>
-            <p id="tip0">节气</p></li>
-
-        <li><img id="pic1" src="img/test.png">
-            <button onclick="pass_pic(1)">通过</button>
-            <p id="tip1">节气</p></li>
-        <li><img id="pic2" src="img/test.png">
-            <button onclick="pass_pic(2)">通过</button>
-            <p id="tip2">节气</p></li>
-        <li><img id="pic3" src="img/test.png">
-            <button onclick="pass_pic(3)">通过</button>
-            <p id="tip3">节气</p></li>
-        <li><img id="pic4" src="img/test.png">
-            <button onclick="pass_pic(4)">通过</button>
-            <p id="tip4">节气</p></li>
-        <li><img id="pic5" src="img/test.png">
-            <button onclick="pass_pic(5)">通过</button>
-            <p id="tip5">节气</p></li>
-        <li><img id="pic6" src="img/test.png">
-            <button onclick="pass_pic(6)">通过</button>
-            <p id="tip6">节气</p></li>
-        <li><img id="pic7" src="img/test.png">
-            <button  onclick="pass_pic(7)">通过</button>
-            <p id="tip7">节气</p></li>
-        <li><img  id="pic8" src="img/test.png">
-            <button  onclick="pass_pic(8)">通过</button>
-            <p id="tip8">节气</p></li>
-        <li><img  id="pic9" src="img/test.png">
-            <button  onclick="pass_pic(9)">通过</button>
-            <p id="tip9">节气</p></li>
-        <li><img  id="pic10" src="img/test.png">
-            <button onclick="pass_pic(10)">通过</button>
-            <p id="tip10">节气</p></li>
-        <li><img  id="pic11" src="img/test.png">
-            <button onclick="pass_pic(11)">通过</button>
-            <p id="tip11">节气</p></li>
-    </ul>
+<div class="top">
+    <img src="img/logo.png" class="logo">
+    <div class="top_list">
+        <span class="top_btns">审核图片</span>
+        <span class="top_btns">图片管理</span>
+        <span class="top_btns">用户管理</span>
+    </div>
 </div>
+<div class="examine">
+    <h1>审核图片</h1>
+    <div class="picture">
+
+        <!--<ul>-->
+        <!--<li><img id="pic0" src="img/test.png">-->
+        <!--<button onclick="pass_pic(0)">通过</button>-->
+        <!--<p id="tip0">节气</p></li>-->
+        <!--<li><img id="pic1" src="img/test.png">-->
+        <!--<button onclick="pass_pic(1)">通过</button>-->
+        <!--<p id="tip1">节气</p></li>-->
+        <!--<li><img id="pic2" src="img/test.png">-->
+        <!--<button onclick="pass_pic(2)">通过</button>-->
+        <!--<p id="tip2">节气</p></li>-->
+        <!--<li><img id="pic3" src="img/test.png">-->
+        <!--<button onclick="pass_pic(3)">通过</button>-->
+        <!--<p id="tip3">节气</p></li>-->
+        <!--<li><img id="pic4" src="img/test.png">-->
+        <!--<button onclick="pass_pic(4)">通过</button>-->
+        <!--<p id="tip4">节气</p></li>-->
+        <!--<li><img id="pic5" src="img/test.png">-->
+        <!--<button onclick="pass_pic(5)">通过</button>-->
+        <!--<p id="tip5">节气</p></li>-->
+        <!--<li><img id="pic6" src="img/test.png">-->
+        <!--<button onclick="pass_pic(6)">通过</button>-->
+        <!--<p id="tip6">节气</p></li>-->
+        <!--<li><img id="pic7" src="img/test.png">-->
+        <!--<button  onclick="pass_pic(7)">通过</button>-->
+        <!--<p id="tip7">节气</p></li>-->
+        <!--<li><img  id="pic8" src="img/test.png">-->
+        <!--<button  onclick="pass_pic(8)">通过</button>-->
+        <!--<p id="tip8">节气</p></li>-->
+        <!--<li><img  id="pic9" src="img/test.png">-->
+        <!--<button  onclick="pass_pic(9)">通过</button>-->
+        <!--<p id="tip9">节气</p></li>-->
+        <!--<li><img  id="pic10" src="img/test.png">-->
+        <!--<button onclick="pass_pic(10)">通过</button>-->
+        <!--<p id="tip10">节气</p></li>-->
+        <!--<li><img  id="pic11" src="img/test.png">-->
+        <!--<button onclick="pass_pic(11)">通过</button>-->
+        <!--<p id="tip11">节气</p></li>-->
+        <!--</ul>-->
+
+        <ul class="ul1">
+            <li class="li_first">
+            <img class="pics" src="img/test.png">
+            <img class="back_btns" src="img/back_btn.png">
+            <span class="title">节气</span>
+            <div class="pass"><span class="pass_0">通过</span></div>
+        </li>
+            <li >
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+            <li>
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+            <li >
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+
+        </ul>
+        <ul class="ul1">
+            <li class="li_first">
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+            <li>
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+            <li >
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+            <li>
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+
+        </ul>
+        <ul class="ul1">
+            <li class="li_first">
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+            <li >
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+            <li>
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+            <li >
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+
+        </ul>
+        <ul class="ul1">
+            <li class="li_first">
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+            <li>
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+            <li >
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+            <li >
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+
+        </ul>
+        <ul class="ul1">
+            <li class="li_first">
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+            <li >
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+            <li>
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+            <li>
+                <img class="pics" src="img/test.png">
+                <img class="back_btns" src="img/back_btn.png">
+                <span class="title">节气</span>
+                <div class="pass"><span class="pass_0">通过</span></div>
+            </li>
+
+        </ul>
+
+    </div>
 
 
-<div class="btns">
-    <button id="btn1" class="btn" onclick='nextpage(1)'>1</button>
-    <button id="btn2" class="btn" onclick='nextpage(2)'>2</button>
-    <button id="btn3" class="btn" onclick='nextpage(3)'>3</button>
-    <button id="btn4" class="btn" onclick='nextpage(4)'>4</button>
-    <button id="btn5" class="btn" onclick='nextpage(5)'>5</button>
+    <!--<div class="btns">-->
+    <!--<button id="btn1" class="btn" onclick='nextpage(1)'>1</button>-->
+    <!--<button id="btn2" class="btn" onclick='nextpage(2)'>2</button>-->
+    <!--<button id="btn3" class="btn" onclick='nextpage(3)'>3</button>-->
+    <!--<button id="btn4" class="btn" onclick='nextpage(4)'>4</button>-->
+    <!--<button id="btn5" class="btn" onclick='nextpage(5)'>5</button>-->
+    <!--</div>-->
+<div class=""></div>
+
 </div>
-
-
 </body>
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/examine.js"></script>
+<!--<script type="text/javascript" src="js/jquery.min.js"></script>-->
+<!--<script type="text/javascript" src="js/examine.js"></script>-->
 </html>
