--- a/后台管理系统/examine.html
+++ b/后台管理系统/examine.html
@@ -339,140 +339,140 @@
                 <td id="name1_0"></td>
                 <td id="name2_0"></td>
                 <td id="pwd0"></td>
-                <td ><button  onclick="del(0)">删除</button></td>
+                <td ><span  class="userdel" onclick="userdel(0)">删除</span></td>
             </tr>
             <tr id="tr1">
                 <td id="id1"></td>
                 <td id="name1_1"></td>
                 <td id="name2_1"></td>
                 <td id="pwd1"></td>
-                <td ><button  onclick="del(1)">删除</button></td>
+                <td ><span  class="userdel" onclick="userdel(1)">删除</span></td>
             </tr>
             <tr id="tr2">
                 <td id="id2"></td>
                 <td id="name1_2"></td>
                 <td id="name2_2"></td>
                 <td id="pwd2"></td>
-                <td ><button  onclick="del(2)">删除</button></td>
+                <td ><span  class="userdel" onclick="userdel(2)">删除</span></td>
             </tr>
             <tr id="tr3">
                 <td id="id3"></td>
                 <td id="name1_3"></td>
                 <td id="name2_3"></td>
                 <td id="pwd3"></td>
-                <td ><button  onclick="del(3)">删除</button></td>
+                <td ><span  class="userdel" onclick="userdel(3)">删除</span></td>
             </tr>
             <tr id="tr4">
                 <td id="id4"></td>
                 <td id="name1_4"></td>
                 <td id="name2_4"></td>
                 <td id="pwd4"></td>
-                <td ><button  onclick="del(4)">删除</button></td>
+                <td ><span  class="userdel" onclick="userdel(4)">删除</span></td>
             </tr>
             <tr id="tr5">
                 <td id="id5"></td>
                 <td id="name1_5"></td>
                 <td id="name2_5"></td>
                 <td id="pwd5"></td>
-                <td ><button  onclick="del(5)">删除</button></td>
+                <td ><span  class="userdel" onclick="userdel(5)">删除</span></td>
             </tr>
             <tr id="tr6">
                 <td id="id6"></td>
                 <td id="name1_6"></td>
                 <td id="name2_6"></td>
                 <td id="pwd6"></td>
-                <td ><button  onclick="del(6)">删除</button></td>
+                <td ><span  class="userdel" onclick="userdel(6)">删除</span></td>
             </tr>
             <tr id="tr7">
                 <td id="id7"></td>
                 <td id="name1_7"></td>
                 <td id="name2_7"></td>
                 <td id="pwd7"></td>
-                <td ><button  onclick="del(7)">删除</button></td>
+                <td ><span  class="userdel" onclick="userdel(7)">删除</span></td>
             </tr>
             <tr id="tr8">
                 <td id="id8"></td>
                 <td id="name1_8"></td>
                 <td id="name2_8"></td>
                 <td id="pwd8"></td>
-                <td ><button  onclick="del(8)">删除</button></td>
+                <td ><span  class="userdel" onclick="userdel(8)">删除</span></td>
             </tr>
             <tr id="tr9">
                 <td id="id9"></td>
                 <td id="name1_9"></td>
                 <td id="name2_9"></td>
                 <td id="pwd9"></td>
-                <td ><button  onclick="del(9)">删除</button></td>
+                <td ><span  class="userdel" onclick="userdel(9)">删除</span></td>
             </tr>
             <tr id="tr10">
                 <td id="id10"></td>
                 <td id="name1_10"></td>
                 <td id="name2_10"></td>
                 <td id="pwd10"></td>
-                <td ><button  onclick="del(10)">删除</button></td>
+                <td ><span  class="userdel" onclick="userdel(10)">删除</span></td>
             </tr>
             <tr id="tr11">
                 <td id="id11"></td>
                 <td id="name1_11"></td>
                 <td id="name2_11"></td>
                 <td id="pwd11"></td>
-                <td ><button  onclick="del(11)">删除</button></td>
+                <td ><span class="userdel"  onclick="userdel(11)">删除</span></td>
             </tr>
             <tr id="tr12">
                 <td id="id12"></td>
                 <td id="name1_12"></td>
                 <td id="name2_12"></td>
                 <td id="pwd12"></td>
-                <td ><button  onclick="del(12)">删除</button></td>
+                <td ><span  class="userdel" onclick="userdel(12)">删除</span></td>
             </tr>
             <tr id="tr13">
                 <td id="id13"></td>
                 <td id="name1_13"></td>
                 <td id="name2_13"></td>
                 <td id="pwd13"></td>
-                <td ><button  onclick="del(13)">删除</button></td>
+                <td ><span  class="userdel" onclick="userdel(13)">删除</span></td>
             </tr>
             <tr id="tr14">
                 <td id="id14"></td>
                 <td id="name1_14"></td>
                 <td id="name2_14"></td>
                 <td id="pwd14"></td>
-                <td ><button  onclick="del(14)">删除</button></td>
+                <td ><span class="userdel"  onclick="userdel(14)">删除</span></td>
             </tr>
             <tr id="tr15">
                 <td id="id15"></td>
                 <td id="name1_15"></td>
                 <td id="name2_15"></td>
                 <td id="pwd15"></td>
-                <td ><button  onclick="del(15)">删除</button></td>
+                <td ><button  class="userdel" onclick="userdel(15)">删除</button></td>
             </tr>
             <tr id="tr16">
                 <td id="id16"></td>
                 <td id="name1_16"></td>
                 <td id="name2_16"></td>
                 <td id="pwd16"></td>
-                <td ><button  onclick="del(16)">删除</button></td>
+                <td ><span class="userdel"  onclick="userdel(16)">删除</span></td>
             </tr>
             <tr id="tr17">
                 <td id="id17"></td>
                 <td id="name1_17"></td>
                 <td id="name2_17"></td>
                 <td id="pwd17"></td>
-                <td ><button  onclick="del(17)">删除</button></td>
+                <td ><span class="userdel"  onclick="userdel(17)">删除</span></td>
             </tr>
             <tr id="tr18">
                 <td id="id18"></td>
                 <td id="name1_18"></td>
                 <td id="name2_18"></td>
                 <td id="pwd18"></td>
-                <td ><button  onclick="del(18)">删除</button></td>
+                <td ><span class="userdel"  onclick="userdel(18)">删除</span></td>
             </tr>
             <tr id="tr19">
                 <td id="id19"></td>
                 <td id="name1_19"></td>
                 <td id="name2_19"></td>
                 <td id="pwd19"></td>
-                <td ><button  onclick="del(19)">删除</button></td>
+                <td ><span class="userdel"  onclick="userdel(19)">删除</span></td>
             </tr>
 
 
