--- a/后台管理系统/examine.html
+++ b/后台管理系统/examine.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style/examine.css">
-    <title>审核图片</title>
+    <title>后台管理系统</title>
 </head>
 <body>
 <div class="top">
