--- a/后台管理系统/examine.html
+++ b/后台管理系统/examine.html
@@ -25,24 +25,28 @@
             <img class="back_btns" src="img/back_btn.png">
             <span class="title" id="tip0">节气</span>
             <div class="pass"><span class="pass_0" onclick="pass_pic(0)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(0)">不通过</span></div>
         </li>
             <li >
                 <img class="pics" id="pic1" src="img/test.png">
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip1">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(1)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(1)">不通过</span></div>
             </li>
             <li>
                 <img class="pics" id="pic2" src="img/test.png">
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip2">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(2)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(2)">不通过</span></div>
             </li>
             <li >
                 <img class="pics" id="pic3" src="img/test.png">
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip3">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(3)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(3)">不通过</span></div>
             </li>
 
         </ul>
@@ -52,24 +56,28 @@
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip4">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(4)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(4)">不通过</span></div>
             </li>
             <li>
                 <img class="pics" id="pic5" src="img/test.png">
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip5">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(5)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(5)">不通过</span></div>
             </li>
             <li >
                 <img class="pics" id="pic6" src="img/test.png">
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip6">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(6)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(6)">不通过</span></div>
             </li>
             <li>
                 <img class="pics" id="pic7" src="img/test.png">
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip7">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(7)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(7)">不通过</span></div>
             </li>
 
         </ul>
@@ -79,24 +87,28 @@
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip8">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(8)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(8)">不通过</span></div>
             </li>
             <li >
                 <img class="pics" id="pic9" src="img/test.png">
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip9">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(9)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(9)">不通过</span></div>
             </li>
             <li>
                 <img class="pics" id="pic10" src="img/test.png">
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip10">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(10)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(10)">不通过</span></div>
             </li>
             <li >
                 <img class="pics" id="pic11" src="img/test.png">
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip11">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(11)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(11)">不通过</span></div>
             </li>
 
         </ul>
@@ -106,24 +118,28 @@
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip12">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(12)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(12)">不通过</span></div>
             </li>
             <li>
                 <img class="pics" id="pic13" src="img/test.png">
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip13">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(13)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(13)">不通过</span></div>
             </li>
             <li >
                 <img class="pics" id="pic14" src="img/test.png">
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip14">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(14)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(14)">不通过</span></div>
             </li>
             <li >
                 <img class="pics" id="pic15" src="img/test.png">
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip15">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(15)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(15)">不通过</span></div>
             </li>
 
         </ul>
@@ -133,24 +149,28 @@
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip16">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(16)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(16)">不通过</span></div>
             </li>
             <li >
                 <img class="pics" id="pic17" src="img/test.png">
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip17">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(17)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(17)">不通过</span></div>
             </li>
             <li>
                 <img class="pics" id="pic18" src="img/test.png">
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip18">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(18)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(18)">不通过</span></div>
             </li>
             <li>
                 <img class="pics" id="pic19" src="img/test.png">
                 <img class="back_btns" src="img/back_btn.png">
                 <span class="title" id="tip19">节气</span>
                 <div class="pass"><span class="pass_0" onclick="pass_pic(19)">通过</span></div>
+                <div class="notpass"><span class="pass_0" onclick="examdel(19)">不通过</span></div>
             </li>
 
         </ul>
