--- a/后台管理系统/examine.html
+++ b/后台管理系统/examine.html
@@ -14,7 +14,7 @@
         <span class="top_btns" id="users" onclick="user()">用户管理</span>
     </div>
 </div>
-<div class="examine"  style="display: none" id="examine">
+<div class="examine"   id="examine">
     <h1>审核图片</h1>
     <div class="picture" >
 
