--- a/后台管理系统/examine.html
+++ b/后台管理系统/examine.html
@@ -230,6 +230,8 @@
                 <img class="pics1" id="picture0" src="img/test.png">
                 <img class="back_btns1" src="img/back_btn.png">
                 <span class="title1" id="title0">节气</span>
+                <img class="back_btns2" src="img/back_btn.png">
+                <span class="del" onclick="del(0)">删除</span>
                 <div class="click"><span id="click0">点击量:</span></div>
                 <div class="zan"><span class="pass_0" id="zan0">点赞量:</span></div>
             </li>
@@ -237,6 +239,8 @@
                 <img class="pics1" id="picture1" src="img/test.png">
                 <img class="back_btns1" src="img/back_btn.png">
                 <span class="title1" id="title1">节气</span>
+                <img class="back_btns2" src="img/back_btn.png">
+                <span class="del" onclick="del(1)">删除</span>
                 <div class="click"><span id="click1">点击量:</span></div>
                 <div class="zan"><span class="pass_0" id="zan1">点赞量:</span></div>
             </li>
@@ -244,6 +248,8 @@
                 <img class="pics1" id="picture2" src="img/test.png">
                 <img class="back_btns1" src="img/back_btn.png">
                 <span class="title1" id="title2">节气</span>
+                <img class="back_btns2" src="img/back_btn.png">
+                <span class="del" onclick="del(2)">删除</span>
                 <div class="click"><span id="click2">点击量:</span></div>
                 <div class="zan"><span class="pass_0" id="zan2">点赞量:</span></div>
             </li>
@@ -255,6 +261,8 @@
                 <img class="pics1" id="picture3" src="img/test.png">
                 <img class="back_btns1" src="img/back_btn.png">
                 <span class="title1" id="title3">节气</span>
+                <img class="back_btns2" src="img/back_btn.png">
+                <span class="del" onclick="del(3)">删除</span>
                 <div class="click"><span id="click3">点击量:</span></div>
                 <div class="zan"><span class="pass_0" id="zan3">点赞量:</span></div>
             </li>
@@ -262,6 +270,8 @@
                 <img class="pics1" id="picture4" src="img/test.png">
                 <img class="back_btns1" src="img/back_btn.png">
                 <span class="title1" id="title4">节气</span>
+                <img class="back_btns2" src="img/back_btn.png">
+                <span class="del" onclick="del(4)">删除</span>
                 <div class="click"><span id="click4">点击量:</span></div>
                 <div class="zan"><span class="pass_0" id="zan4">点赞量:</span></div>
             </li>
@@ -269,6 +279,8 @@
                 <img class="pics1" id="picture5" src="img/test.png">
                 <img class="back_btns1" src="img/back_btn.png">
                 <span class="title1" id="title5">节气</span>
+                <img class="back_btns2" src="img/back_btn.png">
+                <span class="del" onclick="del(5)">删除</span>
                 <div class="click"><span id="click5">点击量:</span></div>
                 <div class="zan"><span class="pass_0" id="zan5">点赞量:</span></div>
             </li>
@@ -280,6 +292,8 @@
                 <img class="pics1" id="picture6" src="img/test.png">
                 <img class="back_btns1" src="img/back_btn.png">
                 <span class="title1" id="title6">节气</span>
+                <img class="back_btns2" src="img/back_btn.png">
+                <span class="del" onclick="del(6)">删除</span>
                 <div class="click"><span id="click6">点击量:</span></div>
                 <div class="zan"><span class="pass_0" id="zan6">点赞量:</span></div>
             </li>
@@ -287,6 +301,8 @@
                 <img class="pics1" id="picture7" src="img/test.png">
                 <img class="back_btns1" src="img/back_btn.png">
                 <span class="title1" id="title7">节气</span>
+                <img class="back_btns2" src="img/back_btn.png">
+                <span class="del" onclick="del(7)">删除</span>
                 <div class="click"><span id="click7">点击量:</span></div>
                 <div class="zan"><span class="pass_0" id="zan7">点赞量:</span></div>
             </li>
@@ -294,6 +310,8 @@
                 <img class="pics1" id="picture8" src="img/test.png">
                 <img class="back_btns1" src="img/back_btn.png">
                 <span class="title1" id="title8">节气</span>
+                <img class="back_btns2" src="img/back_btn.png">
+                <span class="del" onclick="del(8)">删除</span>
                 <div class="click"><span id="click8">点击量:</span></div>
                 <div class="zan"><span class="pass_0" id="zan8">点赞量:</span></div>
             </li>
@@ -305,6 +323,8 @@
                 <img class="pics1" id="picture9" src="img/test.png">
                 <img class="back_btns1" src="img/back_btn.png">
                 <span class="title1" id="title9">节气</span>
+                <img class="back_btns2" src="img/back_btn.png">
+                <span class="del" onclick="del(9)">删除</span>
                 <div class="click"><span id="click9">点击量:</span></div>
                 <div class="zan"><span class="pass_0"  id="zan9">点赞量:</span></div>
             </li>
@@ -312,6 +332,8 @@
                 <img class="pics1" id="picture10" src="img/test.png">
                 <img class="back_btns1" src="img/back_btn.png">
                 <span class="title1" id="title10">节气</span>
+                <img class="back_btns2" src="img/back_btn.png">
+                <span class="del" onclick="del(10)">删除</span>
                 <div class="click"><span id="click10">点击量:</span></div>
                 <div class="zan"><span class="pass_0"  id="zan10">点赞量:</span></div>
             </li>
@@ -319,6 +341,8 @@
                 <img class="pics1" id="picture11" src="img/test.png">
                 <img class="back_btns1" src="img/back_btn.png">
                 <span class="title1" id="title11">节气</span>
+                <img class="back_btns2" src="img/back_btn.png">
+                <span class="del" onclick="del(11)">删除</span>
                 <div class="click"><span id="click11">点击量:</span></div>
                 <div class="zan"><span class="pass_0" id="zan11">点赞量:</span></div>
             </li>
@@ -349,147 +373,147 @@
             <tbody>
             <tr>
                 <td >学号</td>
-                <td>姓名</td>
+                <!--<td>姓名</td>-->
                 <td>用户名</td>
                 <td>密码</td>
                 <td>操作</td>
             </tr>
             <tr id="tr0">
                 <td id="id0"></td>
-                <td id="name1_0"></td>
+                <!--<td id="name1_0"></td>-->
                 <td id="name2_0"></td>
                 <td id="pwd0"></td>
                 <td ><span  class="userdel" onclick="userdel(0)">删除</span></td>
             </tr>
             <tr id="tr1">
                 <td id="id1"></td>
-                <td id="name1_1"></td>
+                <!--<td id="name1_1"></td>-->
                 <td id="name2_1"></td>
                 <td id="pwd1"></td>
                 <td ><span  class="userdel" onclick="userdel(1)">删除</span></td>
             </tr>
             <tr id="tr2">
                 <td id="id2"></td>
-                <td id="name1_2"></td>
+                <!--<td id="name1_2"></td>-->
                 <td id="name2_2"></td>
                 <td id="pwd2"></td>
                 <td ><span  class="userdel" onclick="userdel(2)">删除</span></td>
             </tr>
             <tr id="tr3">
                 <td id="id3"></td>
-                <td id="name1_3"></td>
+                <!--<td id="name1_3"></td>-->
                 <td id="name2_3"></td>
                 <td id="pwd3"></td>
                 <td ><span  class="userdel" onclick="userdel(3)">删除</span></td>
             </tr>
             <tr id="tr4">
                 <td id="id4"></td>
-                <td id="name1_4"></td>
+                <!--<td id="name1_4"></td>-->
                 <td id="name2_4"></td>
                 <td id="pwd4"></td>
                 <td ><span  class="userdel" onclick="userdel(4)">删除</span></td>
             </tr>
             <tr id="tr5">
                 <td id="id5"></td>
-                <td id="name1_5"></td>
+                <!--<td id="name1_5"></td>-->
                 <td id="name2_5"></td>
                 <td id="pwd5"></td>
                 <td ><span  class="userdel" onclick="userdel(5)">删除</span></td>
             </tr>
             <tr id="tr6">
                 <td id="id6"></td>
-                <td id="name1_6"></td>
+                <!--<td id="name1_6"></td>-->
                 <td id="name2_6"></td>
                 <td id="pwd6"></td>
                 <td ><span  class="userdel" onclick="userdel(6)">删除</span></td>
             </tr>
             <tr id="tr7">
                 <td id="id7"></td>
-                <td id="name1_7"></td>
+                <!--<td id="name1_7"></td>-->
                 <td id="name2_7"></td>
                 <td id="pwd7"></td>
                 <td ><span  class="userdel" onclick="userdel(7)">删除</span></td>
             </tr>
             <tr id="tr8">
                 <td id="id8"></td>
-                <td id="name1_8"></td>
+                <!--<td id="name1_8"></td>-->
                 <td id="name2_8"></td>
                 <td id="pwd8"></td>
                 <td ><span  class="userdel" onclick="userdel(8)">删除</span></td>
             </tr>
             <tr id="tr9">
                 <td id="id9"></td>
-                <td id="name1_9"></td>
+                <!--<td id="name1_9"></td>-->
                 <td id="name2_9"></td>
                 <td id="pwd9"></td>
                 <td ><span  class="userdel" onclick="userdel(9)">删除</span></td>
             </tr>
             <tr id="tr10">
                 <td id="id10"></td>
-                <td id="name1_10"></td>
+                <!--<td id="name1_10"></td>-->
                 <td id="name2_10"></td>
                 <td id="pwd10"></td>
                 <td ><span  class="userdel" onclick="userdel(10)">删除</span></td>
             </tr>
             <tr id="tr11">
                 <td id="id11"></td>
-                <td id="name1_11"></td>
+                <!--<td id="name1_11"></td>-->
                 <td id="name2_11"></td>
                 <td id="pwd11"></td>
                 <td ><span class="userdel"  onclick="userdel(11)">删除</span></td>
             </tr>
             <tr id="tr12">
                 <td id="id12"></td>
-                <td id="name1_12"></td>
+                <!--<td id="name1_12"></td>-->
                 <td id="name2_12"></td>
                 <td id="pwd12"></td>
                 <td ><span  class="userdel" onclick="userdel(12)">删除</span></td>
             </tr>
             <tr id="tr13">
                 <td id="id13"></td>
-                <td id="name1_13"></td>
+                <!--<td id="name1_13"></td>-->
                 <td id="name2_13"></td>
                 <td id="pwd13"></td>
                 <td ><span  class="userdel" onclick="userdel(13)">删除</span></td>
             </tr>
             <tr id="tr14">
                 <td id="id14"></td>
-                <td id="name1_14"></td>
+                <!--<td id="name1_14"></td>-->
                 <td id="name2_14"></td>
                 <td id="pwd14"></td>
                 <td ><span class="userdel"  onclick="userdel(14)">删除</span></td>
             </tr>
             <tr id="tr15">
                 <td id="id15"></td>
-                <td id="name1_15"></td>
+                <!--<td id="name1_15"></td>-->
                 <td id="name2_15"></td>
                 <td id="pwd15"></td>
                 <td ><span  class="userdel" onclick="userdel(15)">删除</span></td>
             </tr>
             <tr id="tr16">
                 <td id="id16"></td>
-                <td id="name1_16"></td>
+                <!--<td id="name1_16"></td>-->
                 <td id="name2_16"></td>
                 <td id="pwd16"></td>
                 <td ><span class="userdel"  onclick="userdel(16)">删除</span></td>
             </tr>
             <tr id="tr17">
                 <td id="id17"></td>
-                <td id="name1_17"></td>
+                <!--<td id="name1_17"></td>-->
                 <td id="name2_17"></td>
                 <td id="pwd17"></td>
                 <td ><span class="userdel"  onclick="userdel(17)">删除</span></td>
             </tr>
             <tr id="tr18">
                 <td id="id18"></td>
-                <td id="name1_18"></td>
+                <!--<td id="name1_18"></td>-->
                 <td id="name2_18"></td>
                 <td id="pwd18"></td>
                 <td ><span class="userdel"  onclick="userdel(18)">删除</span></td>
             </tr>
             <tr id="tr19">
                 <td id="id19"></td>
-                <td id="name1_19"></td>
+                <!--<td id="name1_19"></td>-->
                 <td id="name2_19"></td>
                 <td id="pwd19"></td>
                 <td ><span class="userdel"  onclick="userdel(19)">删除</span></td>
